--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.25",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
