--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
