--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "particles.vue3": "^2.1.4",
+    "tsparticles": "^2.1.4",
     "vue": "^3.2.25",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
