--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "less-loader": "^11.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^0.34.7"
   }
 }
