--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/marked": "^4.0.3",
     "axios": "^0.27.2",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.0.18",
     "particles.vue3": "^2.1.4",
     "tsparticles": "^2.1.4",
     "vue": "^3.2.25",
